--- a/assets/styles/src/index.css
+++ b/assets/styles/src/index.css
@@ -2,7 +2,8 @@
 @plugin "@tailwindcss/typography";
 
 @theme inline {
-	--font-sans: "Open Sans", ui-sans-serif, system-ui, sans-serif;
+	--font-sans: "work-sans", ui-sans-serif, system-ui, sans-serif;
+	--font-display: "nanum-myeongjo", sans-serif;
 
 	--color-*: initial;
 
@@ -22,17 +23,17 @@
 	--color-surface-900: oklch(0.216 0.006 56.043);
 	--color-surface-950: oklch(0.147 0.004 49.25);
 
-	--color-primary-50: #e6eff7;
-	--color-primary-100: #b3cee6;
-	--color-primary-200: #80aed6;
-	--color-primary-300: #4d8ec5;
-	--color-primary-400: #1a6db4;
-	--color-primary-500: #005dac;
-	--color-primary-600: #004a8a;
-	--color-primary-700: #003867;
-	--color-primary-800: #002545;
-	--color-primary-900: #001322;
-	--color-primary-950: #000911;
+	--color-primary-50: oklch(0.982 0.018 155.826);
+	--color-primary-100: oklch(0.962 0.044 156.743);
+	--color-primary-200: oklch(0.925 0.084 155.995);
+	--color-primary-300: oklch(0.871 0.15 154.449);
+	--color-primary-400: oklch(0.792 0.209 151.711);
+	--color-primary-500: oklch(0.723 0.219 149.579);
+	--color-primary-600: oklch(0.627 0.194 149.214);
+	--color-primary-700: oklch(0.527 0.154 150.069);
+	--color-primary-800: oklch(0.448 0.119 151.328);
+	--color-primary-900: oklch(0.393 0.095 152.535);
+	--color-primary-950: oklch(0.266 0.065 152.934);
 }
 
 @utility container {
