--- a/assets/styles/src/index.css
+++ b/assets/styles/src/index.css
@@ -39,6 +39,33 @@
 	--color-primary-950: oklch(0.266 0.065 152.934);
 }
 
+.theme-dark {
+	--color-surface-950: oklch(0.985 0.001 106.423);
+	--color-surface-900: oklch(0.97 0.001 106.424);
+	--color-surface-800: oklch(0.923 0.003 48.717);
+	--color-surface-700: oklch(0.869 0.005 56.366);
+	--color-surface-600: oklch(0.709 0.01 56.259);
+	--color-surface-500: oklch(0.553 0.013 58.071); 
+	--color-surface-400: oklch(0.444 0.011 73.639);
+	--color-surface-300: oklch(0.374 0.01 67.558);
+	--color-surface-200: oklch(0.268 0.007 34.298);
+	--color-surface-100: oklch(0.216 0.006 56.043);
+	--color-surface-50: oklch(0.147 0.004 49.25);
+	--color-surface-0: black;
+
+	--color-primary-50: oklch(0.982 0.018 155.826);
+	--color-primary-100: oklch(0.962 0.044 156.743);
+	--color-primary-200: oklch(0.925 0.084 155.995);
+	--color-primary-300: oklch(0.871 0.15 154.449);
+	--color-primary-400: oklch(0.792 0.209 151.711);
+	--color-primary-500: oklch(0.723 0.219 149.579);
+	--color-primary-600: oklch(0.627 0.194 149.214);
+	--color-primary-700: oklch(0.527 0.154 150.069);
+	--color-primary-800: oklch(0.448 0.119 151.328);
+	--color-primary-900: oklch(0.393 0.095 152.535);
+	--color-primary-950: oklch(0.266 0.065 152.934);
+}
+
 @utility container {
 	margin-inline: auto;
 	padding-inline: 1rem;
